--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": "^7.1",
-    "guzzlehttp/guzzle": "^6.0 || ^7.0",
+    "php": "^7.4",
+    "guzzlehttp/guzzle": "^7.0",
     "lcobucci/jwt": "^3.2"
   },
   "require-dev": {
