--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": "^7.4",
+    "php": "^7.4 | ^8.0",
     "guzzlehttp/guzzle": "^7.0",
-    "lcobucci/jwt": "^3.2"
+    "lcobucci/jwt": "^3.4 | ^4.3"
   },
   "require-dev": {
     "ext-zip": "*",
