--- a/composer.json
+++ b/composer.json
@@ -43,5 +43,10 @@
     "phpcompat": [
       "vendor/bin/phpcs -s -p --standard=phpcs-phpcompat.xml"
     ]
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "3.0.x-dev"
+    }
   }
 }
